# snowball-stemmers-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
algorithms/: LICENSE  README.md  czech.sbl  persian.sbl  sesotho.sbl  ukrainian.sbl
src/: lib.rs
src/snowball/algorithms/: armenian.rs  basque.rs  catalan.rs  czech.rs  danish.rs  dutch.rs  dutch_porter.rs  esperanto.rs  estonian.rs  finnish.rs  german.rs  greek.rs  hindi.rs  hungarian.rs  indonesian.rs  irish.rs  italian.rs  lithuanian.rs  lovins.rs  mod.rs  nepali.rs  norwegian.rs  persian.rs  polish.rs  porter.rs  portuguese.rs  romanian.rs  russian.rs  serbian.rs  sesotho.rs  spanish.rs  swedish.rs  tamil.rs  turkish.rs  ukrainian.rs  yiddish.rs
