[package]
name = "snowball_stemmers_rs"
version = "1.0.1"
authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
license = "MIT"
keywords = ["snowball", "stemming", "information", "retrieval", "language"]
categories = ["data-structures"]
description = "A Rust implementation of all Snowball stemming algorithms"
documentation = "https://docs.rs/snowball_stemmers_rs/"
repository = "https://github.com/SeekStorm/snowball-stemmers-rs"
readme = "README.md"
edition = "2024"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
